# persona-mcp

./: .gitignore  README.md  pyproject.toml
src/hello_server/: __init__.py  llm.py  scraper.py  search.py  server.py  simple_search.py  state_manager.py  storage.py
