[project]
name = "persona-mcp-server"
version = "0.1.0"
description = "MCP server that creates AI personas from real online content using RAG"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.6.0",
    "smithery>=0.4.0",
    "anthropic>=0.39.0",
    "crawl4ai>=0.4.244",
    "httpx>=0.28.1",
    "beautifulsoup4>=4.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hello_server"]

[tool.smithery]
server = "hello_server.server:create_server"

[project.scripts]
dev = "smithery.cli.dev:main"
start = "smithery.cli.start:main"
playground = "smithery.cli.playground:main"
